2002-05-09  Justin Rocha <xenithsgl@xenith.org>

                Bumped version to 1.0.11

2002-04-18  Eric Schabell <eric@schabell.com>

		Changed maintainer of spell to
		Wandrebeck Laurent <low@mren2.univ-littoral.fr>

2002-03-28  Eric Schabell <eric@schabell.com>

                Added MAINTAINER line.

2002-03-13  Eric Schabell <eric@schabell.com>

		Added this History file.