@@ -2,7 +2,7 @@
          VERSION=1.0.11
           SOURCE=$SPELL-$VERSION.tar.bz2
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
-   SOURCE_URL[0]=http://telia.dl.sourceforge.net/pureftpd/$SOURCE
+   SOURCE_URL[0]=http://unc.dl.sourceforge.net/pureftpd/$SOURCE
         WEB_SITE=http://www.pureftpd.org
          ENTERED=20010922
          UPDATED=20020221
