@@ -1,0 +1,6 @@
+# This is the pure-ftpd config file.
+#
+# Set the CONFIG variable to pass startup parameters needed by your pure-ftpd server.
+# (This will result in a "pure-ftpd $CONFIG" call in /etc/init.d/pure-ftpd.sh)
+
+CONFIG="-b -B"
