@@ -1,3 +1,8 @@
+2002-05-18  M.L. <m.l@compaqnet.fr>
+
+		Patched pure-ftpd.sh script, added /etc/pure-ftpd.conf file.
+		Changed source URL.
+
 2002-05-09  Justin Rocha <xenithsgl@xenith.org>
 
                 Bumped version to 1.0.11
